<resources>
    <string name="app_name">BancaVF</string>

    <!-- Strings related to login -->
    <string name="prompt_first_password">Elija su contraseña</string>
    <string name="prompt_second_password">Repita su contraseña</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_not_match"> Las contraseñas no coinciden</string>
    <string name="error_not_number"> Se requiere un campo numérico</string>
    <string name="id_label">Ingrese ID Integrante</string>
    <string name="activation_label_text">Su Código de Activación es</string>
    <string name="especification">Indique este código a su pagador</string>
    <string name="welcome_bansefi">Bienvenido a Bansefi</string>
    <string name="id_user">ID Integrante</string>
    <string name="password">Contraseña</string>
    <string name="classic_label">Clásica </string>
    <string name="save_label">Ahorro </string>
    <string name="credit_label">Crédito </string>
    <string name="buy_credit">Compra Tiempo Aire</string>
    <string name="pay_with_cellphone">Paga con tu celular</string>
    <string name="move_money">Mueve dinero entre tus cuentas</string>
    <string name="pay_to_account">Paga a otra cuenta Bansefi</string>
    <string name="pay_to_bank">Paga a otros bancos</string>
    <string name="subject">Asunto (Opcional)</string>
    <string name="amount">Monto</string>
    <string name="qr_code">Código QR</string>
    <string name="numeric_code">Código Numérico</string>
    <string name="message_pay">Si destiantario tine 1 minuto 40 segundos para Recibir este Pago \n Tiempo restante</string>
    <string name="time">Tiempo restante</string>
    <string name="advice">Presente le código QR al destinatario o envíe el código numérico</string>
</resources>
