<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1F1F1"
    android:weightSum="100" >
    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        layout="@layout/toolbar">
    </include>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:src="@drawable/pay" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:weightSum="6">

        <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="1">
            <TextView
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@color/green_color_text"
                android:layout_width="0dp"
                android:text="@string/pay_with_cellphone" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:weightSum="2"
            >
            <TextView
                android:textColor="#FFFFFF"
                android:background="@color/color_red"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/qr_code"
                android:layout_width="0dp" />
            <TextView
                android:id="@+id/chage_to_code"
                android:textColor="@color/color_red"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/numeric_code"
                android:layout_width="0dp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="2"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:weightSum="1">

            <ImageView
                android:src="@drawable/qr"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:padding="15dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/white_cell"
            android:weightSum="1">
            <TextView
                android:textColor="@color/gray_color_text"
                android:textSize="15sp"
                android:gravity="start"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:text="@string/message_pay"/>


        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="1"
            android:paddingTop="30dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:background="@drawable/white_cell"
            android:weightSum="1">

            <TextView
                android:textColor="@color/gray_color_text"
                android:textSize="15sp"
                android:gravity="start"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:text="@string/advice"/>
        </TableRow>

    </TableLayout>

</LinearLayout>